test/should_fail/TestReservedMethod2.oj

@implementation TestReservedMethod

- (void) alloc { }

@end
